feat: unocss 尝试，不是很好用

--- a/web/src/styles/app.less
+++ b/web/src/styles/app.less
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+p{
+  margin-block-start: inherit;
+  margin-block-end: inherit;
+}
+
 html {
   background: var(--van-gray-1);
   color-scheme: light;
